fix bug sprint 54: SRC 003 & SRC 004

--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -715,6 +715,7 @@
             (selectedAll)="getSelectedAll($event)"
             (selectedAllId)="getSelectedAllId($event)"
             [areas]="areasInit"
+            [isNotifValidation]="true"
           ></target-area>
 
         </div>
