'fix bug at push notif & popup notif'

--- a/src/app/shared/target-area/dialog-import/dialog-import.component.html
+++ b/src/app/shared/target-area/dialog-import/dialog-import.component.html
@@ -36,8 +36,8 @@
         </span>
       </div>
     </div>
-    <div *ngIf="isUploaded && !isValid && !payload.isNotifValidation" class="notif notif-error mt-24">
-      Silahkan cek kembali produk yang anda upload!
+    <div *ngIf="isUploaded && !isValid && !payload.isNotifValidation || isUploaded && payload.isNotifValidation && rows.length === 0" class="notif notif-error mt-24">
+      Silahkan cek kembali <span *ngIf="!payload.isNotifValidation; else showFile">produk</span><ng-template #showFile>file</ng-template> yang anda upload!
     </div>
     <div *ngIf="rows.length > 0" class="preview">
       <div class="preview-container">
