--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -289,12 +289,12 @@
         <mat-tab label="Dokumen">
           <div *ngIf="detailOrder.document_image_url == null" class="pb-16 mt-16" fxLayout="row" fxLayoutAlign="center">
             <mat-icon class="m-0 mr-16 secondary-text">warning</mat-icon>
-            <div class="mt-4">Anda tidak memiliki akses untuk melihat Dokumen</div>
+            <div>Anda tidak memiliki akses untuk melihat Dokumen</div>
           </div>
           <div *ngIf="detailOrder.document_image_url != null" class="attachment-layout" fxLayout="column" fxLayoutAlign="center center">
-            <img class="attachment-img" id="image4" [src]="detailOrder.document_image_url" />
+            <img class="attachment-img" id="image4" [src]="documentOrderUrl" />
           </div>
-          <div fxLayout="row" style="margin-left: 15px;" *ngIf="detailOrder?.document">
+          <div class="mt-24" fxLayout="row" style="margin-left: 15px;" *ngIf="detailOrder?.document">
             <mat-form-field fxFlex="30">
               <input matInput [formControl]="document"
                 [placeholder]="'Nomor ' + (detailOrder?.document_type ? detailOrder?.document_type.toUpperCase() : 'Kartu') " />
