--- a/src/app/components/popup-image-blob/popup-image-blob.component.html
+++ b/src/app/components/popup-image-blob/popup-image-blob.component.html
@@ -9,7 +9,7 @@
   <div fxFlex class="p-12 pt-0">
     <ng-container>
       <!-- {{url}} -->
-      <img class="attachment-img" id="image3" [src]='url' #screenImg3 />
+      <img oncontextmenu="return false;" onmousedown="return false" class="attachment-img" id="image3" [src]='url' #screenImg3 />
     </ng-container>
   </div>
 
