--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -289,7 +289,7 @@
         <mat-tab label="Dokumen" *ngIf="detailOrder.document_image_url != null">
           <div class="attachment-layout" fxLayout="column" fxLayoutAlign="center center">
             <img oncontextmenu="return false;" onmousedown="return false" class="attachment-img" id="image4" [src]="documentOrderUrl" />
-            <button mat-raised-button class="mat-accent mt-24" (click)="download()">Download</button>
+            <button mat-raised-button class="mat-accent mt-24 black-500-bg" (click)="download()">Download</button>
           </div>
           <div class="mt-24" fxLayout="row" style="margin-left: 15px;" *ngIf="detailOrder?.document">
             <mat-form-field fxFlex="30">
