add import loader

--- a/src/app/pages/notes-retailer/import-component/import-notes-dialog.component.html
+++ b/src/app/pages/notes-retailer/import-component/import-notes-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="dialog-content-wrapper">
+<div class="dialog-content-wrapper" style="min-width: 800px;">
 
     <mat-toolbar matDialogTitle class="m-0" fxFlex="1 0 auto" fxLayout="row">
   
